# verbitto

./: .biomeignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.github/workflows/: ci.yml  publish-signer.yml
apps/api/: .env.example  check-db.mjs  check-platform.mjs  check-rpc-history.js  drizzle.config.ts  find-settled.js  package.json  task_escrow.json  tsconfig.json  vercel.json
apps/verbitto/: .gitignore  package.json
apps/web/: .env.example  contentlayer.config.js  package.json  tsconfig.json  vercel.json
apps/www/: package-lock.json  package.json  tsconfig.json
docker-signer/: .dockerignore  Dockerfile  README.md  example-agent.sh  package.json  start-signer.sh  verbitto-signer.js
docs/: event-indexer.md  index.mdx  installation.mdx  quick-start.mdx
docs/api/: agent.mdx  platform.mdx  task.mdx
docs/concepts/: accounts.mdx
docs/deployment/: devnet.mdx  security.mdx
docs/guides/: errors.mdx  events.mdx  frontend.mdx
migrations/: deploy.js  deploy.ts
programs/task-escrow/: Cargo.toml
programs/task-escrow/src/: contexts.rs  errors.rs  events.rs  lib.rs  state.rs
programs/task-escrow/src/instructions/: agent.rs  dispute.rs  mod.rs  platform.rs  task.rs  template.rs
public/: SKILL.md
scripts/: init-platform.ts  init-templates.ts  initialize-platform.ts
src/: globals.d.ts
src/app/: globals.css  layout.tsx
src/components/: doc-primitives.tsx  (+11 more)
tests/: task-escrow.js  task-escrow.ts  tsconfig.json
(+222 files in other folders)
